<resources>
    <string name="app_name">2ndHandBookshop</string>
    <string name="facebook_app_id">398391843697400</string>
    <string name="action_bar_profile">Profile</string>
    <string name="action_bar_search">Search</string>
    <string name="button_register">Register</string>

    <!-- register activity -->
    <string name="title_activity_register">Register</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="prompt_password_register">Password</string>
    <string name="error_invalid_name">Name should be at least 5 characters long!</string>
    <string name="error_different_password">Passwords do not match!</string>
    <string name="error_invalid_email">Email must contain @ and be at least 5 characters long</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Welcome</string>
    <string name="prompt_login">Login or email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_login">This email address or name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_activity_remember_text">remember</string>
    <string name="title_activity_search">Search</string>

    <string name="close_checkbox_text">Close</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search Here</string>
    <string name="title_activity_offer">Offer details</string>
    <string name="title_activity_add_offer">Create offer</string>
    <string name="prompt_title">Book title</string>
    <string name="prompt_author">Book author</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_price">Price</string>
    <string name="action_bar_add_offer">Add offer</string>
    <string name="action_bar_logout">Logout</string>
    <string name="search_button_text">Submit</string>
    <string-array name="tags">
        <item>Undefined</item>
        <item>Drama</item>
        <item>SciFi</item>
        <item>History</item>
        <item>Edu</item>
        <item>Cook</item>
        <item>Fantasy</item>
        <item>Romance</item>
        <item>Criminal</item>
        <item>Child</item>
    </string-array>
    <string name="title_activity_buy_currency">Buy currency</string>
    <string name="profile_activity_label">User profile</string>
</resources>
