<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".WelcomeActivity">
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_bar_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_bar_search"
        android:showAsAction="always" />
    <item android:id="@+id/action_bar_add_offer"
        android:title="@string/action_bar_add_offer"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_bar_profile"
        android:title="@string/action_bar_profile"
        android:icon="@drawable/ic_action_person"
        android:showAsAction="ifRoom" />
</menu>
