<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.szlif.bookshop.RegisterActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/register_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/register_form_inner" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <EditText android:id="@+id/name_field" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_name"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/email_field" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/password_field" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password_register"
                android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <EditText android:id="@+id/password_confirm_field" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password_confirm"
                android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <Button android:id="@+id/register_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/action_register"
                android:textStyle="bold"
                android:onClick="attemptRegister"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
