<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.szlif.bookshop.AddOfferActivity">

    <EditText android:id="@+id/title_field" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_title"
        android:inputType="text" android:maxLines="1"
        android:singleLine="true" />
    <EditText android:id="@+id/author_field" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_author"
        android:inputType="text" android:maxLines="1"
        android:singleLine="true" />
    <EditText android:id="@+id/description_field" android:layout_width="match_parent"
        android:layout_height="0dp" android:hint="@string/prompt_description"
        android:layout_weight="1"
        android:inputType="textMultiLine"
        android:minLines="3"/>
    <Spinner
        android:id="@+id/tags_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        </Spinner>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_price"
                android:textColor="#777777"/>
            <EditText android:id="@+id/price_field"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:orientation="vertical"
                android:inputType="number"/>

        </LinearLayout>
        <ImageView android:id="@+id/cover_field"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:src="@drawable/camera"
            android:alpha="0.4"/>

    </LinearLayout>
    <Button
        android:id="@+id/create_offer_button"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="Create offer"/>

</LinearLayout>
